API route for Global Data

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -95,7 +95,7 @@
       }
 
       function showAllPolygons() {
-        $.get("/admin/looproute", (data, success) => {
+        $.get("/api/looproute", (data, success) => {
           if (!success) return;
           polygonCoordinates = data;
         });
