--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -157,6 +157,17 @@
                     </div>
                   </div>
                 </div>
+                <div class="form-group mb-2">
+                  <p class="m-0">Image Speed</p>
+                  <input
+                    type="number"
+                    min="1"
+                    value="1"
+                    oninput="setMarkerSpeed(this)"
+                    max="10"
+                    class="form-control"
+                  />
+                </div>
                 <% if (icons) { %>
                 <p class="m-0">Select Image</p>
                 <div class="icon-container d-flex justify-content-center">
@@ -199,9 +210,20 @@
       let isClosedPath = 0;
       let map, marker, polygon, circle, iconMarker, radius;
       let polyCoords = [];
+      let speed = 1;
       const beachFlagImg = document.createElement("img");
       let pos = { lat: 55.5, lng: 254.7 };
 
+      const setMarkerSpeed = (event) => {
+        speed = event.value;
+        if (speed < 1) {
+          event.value = 1;
+        } else if (speed > 10) {
+          event.value = 10;
+        }
+        speed = event.value;
+        payloadData.speed = speed;
+      };
       const setMapRadius = (event) => {
         circle.setCenter(polyCoords[0]);
         radius = Math.pow(event.value / 10, 1.5) * (1000 / map.getZoom());
@@ -225,6 +247,7 @@
         polygonCoords: polyCoords,
         image: beachFlagImg.src,
         radius: radius,
+        speed: speed,
       };
       $(".save_final").click(() => {
         if (
