--- a/public/css/style.css
+++ b/public/css/style.css
@@ -113,3 +113,24 @@
     left: 100%;
   }
 }
+
+.WinScreen {
+  display: flex;
+  width: 100vw;
+  height: 100%;
+  background: radial-gradient(white, #a7ffa7);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9;
+  justify-content: center;
+  align-items: center;
+}
+
+.WinScreen:before {
+  content: "You Won";
+  font-size: 3rem;
+  font-family: sans-serif;
+  font-weight: 700;
+  color: green;
+}
